--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,11 @@
         "doctrine/dbal": "^3.9",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.0.1",
+        "guzzlehttp/guzzle": "6.5",
         "laravel/framework": "^8.0",
-        "laravel/tinker": "^2.0"
+        "laravel/passport": "^10.4",
+        "laravel/tinker": "^2.0",
+        "laravel/ui": "^3.4"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
